--- a/public/about/index.html
+++ b/public/about/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
     </nav>
-    <h1>Bhavin </h1>
+    <h1>about </h1>
 
     <footer class="footer">
         <div class="container">
