--- a/public/services/index.html
+++ b/public/services/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
     </nav>
-    
+    <h1>Services</h1>
 
     <footer class="footer">
         <div class="container">
