--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
     </nav>
-    
+    <h1>Contact</h1>
 
     <footer class="footer">
         <div class="container">
