--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <title>Laptop Support | Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/styles/main.css">
 
@@ -253,7 +255,7 @@
 </section>
 
 
-<section class="container pt-5 pb-5">
+<section class="container pt-5 pb-5" id="diagnose">
     <h2 class="text-center section-title">Diagnosing Process</h2>
     <div class="row">
         <div class="col-md-4 p-5">
@@ -377,7 +379,7 @@
         <div class="row align-items-center">
 
             <div class="col-md-7 p-4">
-                <h3 class="point-title">Hdd Recovery</h3>
+                <h3 class="point-title">Data Recovery</h3>
                 <ul>
                     <li>Firmware Issue Resolution</li>
                     <li>Head Replacement</li>
@@ -455,89 +457,123 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <div class="card w-100 text-center">
+                <div class="card w-100 ">
                     <!-- <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
                         fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
                             d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z" />
                     </svg> -->
-                    <span class="emoji-icon">🆓</span>
 
-                    <div class="card-body text-center">
-                        <h5>No Fix No Fees</h5>
-                        <p>We provides Free Diagnosing <strong>No Cancellation Changes</strong> </p>
-                        <a href="#">Read more.</a>
+
+                    <div class="card-body">
+                        <div>
+                            <span class="emoji-icon">🆓</span>
+                        </div>
+                        <div>
+                            <h5>No Fix No Fees</h5>
+                            <p>We provides Free Diagnosing <strong>No Cancellation Changes</strong> </p>
+                            <a href="#">Read more.</a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card w-100 text-center">
+                <div class="card w-100 ">
+                    <div class="card-body ">
+                        <div>
+                            <span class="emoji-icon">⚙️</span>
+                        </div>
+                        <div>
+                            <h5>Get Any Part</h5>
+                            <p>Get Any laptop/ Apple/ projector parts @ dealer price </p>
+                            <a href="#">Read more.</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-                    <span class="emoji-icon">💯</span>
+            <div class="col-md-3">
+                <div class="card w-100">
 
-                    <div class="card-body text-center">
-                        <h5>100% Satisfaction</h5>
-                        <p>We Provide service with asurity at first.<strong></strong> pay only if satisfied</p>
-                        <a href="#">Read more.</a>
+
+                    <div class="card-body">
+                        <div>
+                            <span class="emoji-icon">💲</span>
+                        </div>
+                        <div>
+                            <h5>Next Day Estimate</h5>
+                            <p>Get Fastest Estimation for majority of the issues.</p>
+                            <a href="#">Read more.</a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card w-100 text-center">
+                <div class="card w-100 ">
 
-                    <span class="emoji-icon">💲</span>
 
-                    <div class="card-body text-center">
-                        <h5>Next Day Estimate</h5>
-                        <p>Get Fastest Estimation for majority of the issues.</p>
-                        <a href="#">Read more.</a>
+                    <div class="card-body">
+                        <div>
+                            <span class="emoji-icon">💯</span>
+                        </div>
+                        <div>
+                            <h5>100% Satisfaction</h5>
+                            <p>We Provide service with asurity at first.<strong></strong> pay only if satisfied</p>
+                            <a href="#">Read more.</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="card w-100 text-center">
-                    <span class="emoji-icon">🛡️</span>
 
-                    <div class="card-body text-center">
-                        <h5>30 Days Warranty & Support</h5>
-                        <p>We provie Money Back Gaurantee So you only gonna Pay if your problem is resolved. </p>
-                        <a href="#">Read more.</a>
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="row mt-4 justify-content-center">
             <div class="col-md-3">
-                <div class="card w-100 text-center">
-                    <span class="emoji-icon">🚙</span>
-                    <div class="card-body text-center">
-                        <h5>Free Pickup and Drop</h5>
-                        <p>We also provide facility to Pickup & Drop your Apple Product @ your Door Step. </p>
-                        <a href="#">Read more.</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card w-100 text-center">
-                    <span class="emoji-icon">👍</span>
+                <div class="card w-100 ">
 
-                    <div class="card-body text-center">
-                        <h5>Affordable Price</h5>
-                        <p>Fix issue with your Product at Much Much Affordable Price Gauranteed </p>
-                        <a href="#">Read more.</a>
+                    <div class="card-body ">
+                        <div>
+                            <span class="emoji-icon">🚙</span>
+                        </div>
+                        <div>
+                            <h5>Free Pickup and Drop</h5>
+                            <p>We also provide facility to Pickup & Drop your Apple Product @ your Door Step. </p>
+                            <a href="#">Read more.</a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card w-100 text-center">
-                    <span class="emoji-icon">⚙️</span>
-                    <div class="card-body text-center">
-                        <h5>Get Any Part</h5>
-                        <p>Get Any laptop/ Apple/ projector parts @ dealer price </p>
-                        <a href="#">Read more.</a>
+                <div class="card w-100">
+
+                    <div class="card-body ">
+                        <div>
+                            <span class="emoji-icon">🛡️</span>
+                        </div>
+                        <div>
+                            <h5>30 Days Warranty & Support</h5>
+                            <p>We provie Money Back Gaurantee So you only gonna Pay if your problem is resolved. </p>
+                            <a href="#">Read more.</a>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-3">
+                <div class="card w-100">
+
+                    <div class="card-body ">
+                        <div>
+                            <span class="emoji-icon">👍</span>
+                        </div>
+                        <div>
+                            <h5>Affordable Price</h5>
+                            <p>Fix issue with your Product at Much Much Affordable Price Gauranteed </p>
+                            <a href="#">Read more.</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
