--- a/public/index.html
+++ b/public/index.html
@@ -469,7 +469,7 @@
                         <div>
                             <span class="emoji-icon">🆓</span>
                         </div>
-                        <div>
+                        <div class="my-card-detail">
                             <h5>No Fix No Fees</h5>
                             <p>We provides Free Diagnosing <strong>No Cancellation Changes</strong> </p>
                             <a href="#">Read more.</a>
@@ -483,7 +483,7 @@
                         <div>
                             <span class="emoji-icon">⚙️</span>
                         </div>
-                        <div>
+                        <div class="my-card-detail">
                             <h5>Get Any Part</h5>
                             <p>Get Any laptop/ Apple/ projector parts @ dealer price </p>
                             <a href="#">Read more.</a>
@@ -500,7 +500,7 @@
                         <div>
                             <span class="emoji-icon">💲</span>
                         </div>
-                        <div>
+                        <div class="my-card-detail">
                             <h5>Next Day Estimate</h5>
                             <p>Get Fastest Estimation for majority of the issues.</p>
                             <a href="#">Read more.</a>
@@ -516,7 +516,7 @@
                         <div>
                             <span class="emoji-icon">💯</span>
                         </div>
-                        <div>
+                        <div class="my-card-detail">
                             <h5>100% Satisfaction</h5>
                             <p>We Provide service with asurity at first.<strong></strong> pay only if satisfied</p>
                             <a href="#">Read more.</a>
@@ -534,7 +534,7 @@
                         <div>
                             <span class="emoji-icon">🚙</span>
                         </div>
-                        <div>
+                        <div class="my-card-detail">
                             <h5>Free Pickup and Drop</h5>
                             <p>We also provide facility to Pickup & Drop your Apple Product @ your Door Step. </p>
                             <a href="#">Read more.</a>
@@ -549,7 +549,7 @@
                         <div>
                             <span class="emoji-icon">🛡️</span>
                         </div>
-                        <div>
+                        <div class="my-card-detail">
                             <h5>30 Days Warranty & Support</h5>
                             <p>We provie Money Back Gaurantee So you only gonna Pay if your problem is resolved. </p>
                             <a href="#">Read more.</a>
@@ -565,7 +565,7 @@
                         <div>
                             <span class="emoji-icon">👍</span>
                         </div>
-                        <div>
+                        <div class="my-card-detail">
                             <h5>Affordable Price</h5>
                             <p>Fix issue with your Product at Much Much Affordable Price Gauranteed </p>
                             <a href="#">Read more.</a>
