--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
     <div id="bannerCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/images/motherboard-bg.jpg" class="d-block w-100" alt="...">
+                <img src="/images/motherboard-bg.jpg" class="d-block banner-image w-100" alt="...">
                 <div class="carousel-caption">
                     <h5 class="banner-title">Total Laptop Solution</h5>
                     <p class="lead mb-5">We Provides total laptop sales & service under one roof</p>
@@ -134,7 +134,7 @@
                         </svg>
                         Call Now
                     </a>
-                    or
+                    <span class="extra-content">or</span>
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="carousel-item ">
-                <img src="/images/motherboard-bg.jpg" class="d-block w-100" alt="...">
+                <img src="/images/motherboard-bg.jpg" class="d-block banner-image w-100" alt="...">
                 <div class="carousel-caption">
                     <h5 class="banner-title">Total Apple iMac/ Macbook Solution</h5>
                     <p class="lead mb-5">We Provides total Apple Macbook/ iMac/ Mac mini services</p>
@@ -170,7 +170,7 @@
                         </svg>
                         Call Now
                     </a>
-                    or
+                    <span class="extra-content">or</span>
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="carousel-item ">
-                <img src="/images/motherboard-bg.jpg" class="d-block w-100" alt="...">
+                <img src="/images/motherboard-bg.jpg" class="d-block banner-image w-100" alt="...">
                 <div class="carousel-caption">
                     <h5 class="banner-title">Hdd Recovery Solutions</h5>
                     <p class="lead mb-5">Hdd Recovery services including firmware issue, Logic board repair, Head
@@ -207,7 +207,7 @@
                         </svg>
                         Call Now
                     </a>
-                    or
+                    <span class="extra-content">or</span>
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
