about page completed

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
                     <!-- phone number -->
                     <a href="#">
 
-                        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-telephone-fill"
+                        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="header-icon bi bi-telephone-fill"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" fill="white"
+                            <path fill-rule="evenodd"
                                 d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
                         </svg>
                         <h6 class="m-0 mr-1 text-light">+91 XXXXX-XXXXX</h6>
@@ -49,24 +49,23 @@
                     <div class="p-1  align-items-center d-flex">
                         <div class="mr-4">
                             <a class="footer-icon" href="#">
-                                <svg width="2rem" height="2rem" viewBox="0 0 172 172" fill="none"
+                                <svg width="2rem" height="2rem" viewBox="0 0 172 172" fill="none" class="header-icon"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
-                                        d="M146.805 0H25.1953C11.3038 0 0 11.3038 0 25.1953V146.805C0 160.696 11.3038 172 25.1953 172H75.9219V111.195H55.7656V80.9609H75.9219V60.4688C75.9219 43.7965 89.484 30.2344 106.156 30.2344H136.727V60.4688H106.156V80.9609H136.727L131.688 111.195H106.156V172H146.805C160.696 172 172 160.696 172 146.805V25.1953C172 11.3038 160.696 0 146.805 0Z"
-                                        fill="white" />
+                                        d="M146.805 0H25.1953C11.3038 0 0 11.3038 0 25.1953V146.805C0 160.696 11.3038 172 25.1953 172H75.9219V111.195H55.7656V80.9609H75.9219V60.4688C75.9219 43.7965 89.484 30.2344 106.156 30.2344H136.727V60.4688H106.156V80.9609H136.727L131.688 111.195H106.156V172H146.805C160.696 172 172 160.696 172 146.805V25.1953C172 11.3038 160.696 0 146.805 0Z" />
                                 </svg>
                             </a>
                         </div>
                         <div class="mr-4">
-                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-envelope-open"
+                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="header-icon bi bi-envelope-open"
                                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" fill="white"
+                                <path fill-rule="evenodd"
                                     d="M8.47 1.318a1 1 0 0 0-.94 0l-6 3.2A1 1 0 0 0 1 5.4v.818l5.724 3.465L8 8.917l1.276.766L15 6.218V5.4a1 1 0 0 0-.53-.882l-6-3.2zM15 7.388l-4.754 2.877L15 13.117v-5.73zm-.035 6.874L8 10.083l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738zM1 13.117l4.754-2.852L1 7.387v5.73zM7.059.435a2 2 0 0 1 1.882 0l6 3.2A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765l6-3.2z" />
                             </svg>
                         </div>
                         <div>
                             <a class="footer-icon" href="#">
-                                <svg version="1.1" width="2rem" height="2rem" id="Capa_1"
+                                <svg version="1.1" width="2rem" height="2rem" id="Capa_1" class="header-icon"
                                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                     x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;"
                                     xml:space="preserve">
@@ -80,8 +79,7 @@
                                                 c1.824,3.776,3.648,8.896,1.088,13.856c-2.4,5.12-4.512,7.392-8.288,11.744c-3.776,4.352-7.36,7.68-11.136,12.352
                                                 c-3.456,4.064-7.36,8.416-3.008,15.936c4.352,7.36,19.392,31.904,41.536,51.616c28.576,25.44,51.744,33.568,60.032,37.024
                                                 c6.176,2.56,13.536,1.952,18.048-2.848c5.728-6.176,12.8-16.416,20-26.496c5.12-7.232,11.584-8.128,18.368-5.568
-                                                c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736C411.2,329.152,411.2,344.032,405.024,361.504z"
-                                        fill="white" />
+                                                c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736C411.2,329.152,411.2,344.032,405.024,361.504z" />
                                 </svg>
 
                             </a>
@@ -134,7 +132,7 @@
                         </svg>
                         Call Now
                     </a>
-                    <span class="extra-content">or</span>
+
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -170,7 +168,7 @@
                         </svg>
                         Call Now
                     </a>
-                    <span class="extra-content">or</span>
+
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -207,7 +205,7 @@
                         </svg>
                         Call Now
                     </a>
-                    <span class="extra-content">or</span>
+
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -243,12 +241,12 @@
 
 </div>
 
-<section class="container pt-5 pb-5">
-    <div class="row">
-        <div class="col-md-4">
+<section class="container pt-5 pb-5" id="whyus">
+    <div class="row ">
+        <div class="col-md-4 ">
             <h2 class="section-title">Why choose us?</h2>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 ">
             <p class="lead">We are providing support in laptop & computer from over a decade.. lorem ippsum</p>
         </div>
     </div>
@@ -258,7 +256,7 @@
 <section class="container pt-5 pb-5" id="diagnose">
     <h2 class="text-center section-title">Diagnosing Process</h2>
     <div class="row">
-        <div class="col-md-4 p-5">
+        <div class="col-md-4 p-5 anim">
 
             <div class="card w-100 text-center">
                 <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-file-earmark-plus"
@@ -278,7 +276,7 @@
             </div>
 
         </div>
-        <div class="col-md-4 p-5">
+        <div class="col-md-4 p-5 anim">
 
             <div class="card w-100 text-center">
                 <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2" fill="currentColor"
@@ -296,7 +294,7 @@
             </div>
 
         </div>
-        <div class="col-md-4 p-5">
+        <div class="col-md-4 p-5 anim">
 
             <div class="card w-100 text-center">
                 <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-truck" fill="currentColor"
@@ -319,13 +317,13 @@
 
 
 <section class="pt-5 pb-5" id="services">
-    <h1 class="text-center text-light mb-4 section-title">Our Services</h1>
+    <h1 class="text-center mb-4 section-title-light">Our Services</h1>
     <div class="container text-light">
         <div class="row align-items-center">
-            <div class="col-md-6 p-4 d-none d-md-inline">
+            <div class="col-md-6 p-4 d-none d-md-inline animRight">
                 <img src="/images/laptop.png" alt="laptop banner" class="w-100 ">
             </div>
-            <div class="col-md-6 p-4">
+            <div class="col-md-6 p-4 animLeft">
                 <h3 class="point-title">Laptop Repair Services</h3>
                 <ul>
                     <li>Logic Board Repair/ Replacement</li>
@@ -337,13 +335,13 @@
                     <li>Bios / Firmware password receovery</li>
                     <li>Bios / Firmware ReWriting</li>
                     <li>Battery Chnarging Solution</li>
-                    <a href="#">Read more</a>
+                    <a href="#" class="section-title-light">Read more</a>
                 </ul>
             </div>
         </div>
         <div class="row align-items-center">
 
-            <div class="col-md-7 p-4">
+            <div class="col-md-7 p-4 animRight">
                 <h3 class="point-title">Apple/ Macbook/ iMac Services</h3>
                 <ul>
                     <li>macOS installation</li>
@@ -352,18 +350,18 @@
                     <li>Display Repair / Replacement</li>
                     <li>Firmware Update / Recovery (T2)</li>
                     <li>Data Recovery</li>
-                    <a href="#">Read more</a>
+                    <a href="#" class="section-title-light">Read more</a>
                 </ul>
             </div>
-            <div class="col-md-5 p-4 d-none d-md-inline">
+            <div class="col-md-5 p-4 d-none d-md-inline animLeft">
                 <img src="/images/apple_family.png" alt="apple family" class="w-100 ">
             </div>
         </div>
         <div class="row align-items-center">
-            <div class="col-md-5 p-4 d-none d-md-inline">
+            <div class="col-md-5 p-4 d-none d-md-inline animRight">
                 <img src="/images/projector.png" alt="projector" class="w-75 ">
             </div>
-            <div class="col-md-7 p-4">
+            <div class="col-md-7 p-4 animLeft">
                 <h3 class="point-title">Projector Services</h3>
                 <ul>
                     <li>LAMP Replacement</li>
@@ -372,13 +370,13 @@
                     <li>Lens Replacement</li>
                     <li>Low brightness solution</li>
                     <li> Projector Accessories sales</li>
-                    <a href="#">Read more</a>
+                    <a href="#" class="section-title-light">Read more</a>
                 </ul>
             </div>
         </div>
         <div class="row align-items-center">
 
-            <div class="col-md-7 p-4">
+            <div class="col-md-7 p-4 animRight">
                 <h3 class="point-title">Data Recovery</h3>
                 <ul>
                     <li>Firmware Issue Resolution</li>
@@ -387,10 +385,10 @@
                     <li>Logic Board Repair/ Replacement</li>
                     <li>Partition Recovery</li>
                     <li>Lost File Recovery</li>
-                    <a href="#">Read more</a>
+                    <a href="#" class="section-title-light">Read more</a>
                 </ul>
             </div>
-            <div class="col-md-5 p-4 d-none d-md-inline">
+            <div class="col-md-5 p-4 d-none d-md-inline animLeft">
                 <img src="/images/hddrecovery.png" alt="projector" class="w-75 ">
             </div>
         </div>
@@ -398,7 +396,7 @@
 </section>
 
 
-<section class="pt-5 pb-5 container-fluid">
+<section class="pt-5 pb-5 container-fluid ">
 
     <h2 class="text-center mb-5 section-title">What our customer says</h2>
 
@@ -456,7 +454,7 @@
     <h2 class="text-center mb-5 section-title">Why Choose only Us</h2>
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100 ">
                     <!-- <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
                         fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -477,7 +475,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100 ">
                     <div class="card-body ">
                         <div>
@@ -492,7 +490,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100">
 
 
@@ -508,7 +506,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100 ">
 
 
@@ -527,7 +525,7 @@
 
         </div>
         <div class="row mt-4 justify-content-center">
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100 ">
 
                     <div class="card-body ">
@@ -542,7 +540,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100">
 
                     <div class="card-body ">
@@ -558,8 +556,8 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
-                <div class="card w-100">
+            <div class="col-md-3 fadeInUp-stagger">
+                <div class="card w-100 ">
 
                     <div class="card-body ">
                         <div>
@@ -579,16 +577,16 @@
 </section>
 
 <section id="contactSection" class="text-light pb-5 pt-5">
-    <h1 class="text-center section-title">Still having query ?</h1>
+    <h1 class="text-center section-title-light">Still having query ?</h1>
     <p class="text-center">Feel free to contact us</p>
-    <div class="container">
-        <div class="col-md-7 mx-auto">
+    <div class="container ">
+        <div class="col-md-7 mx-auto fadeInRight">
             <div class="form-group">
                 <label>Name</label>
                 <input class="form-control" placeholder="Name">
             </div>
 
-            <div class="form-row">
+            <div class="form-row fadeInRight">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>Phone</label>
@@ -603,7 +601,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group fadeInRight">
                 <label>Services</label>
                 <select class="form-control">
                     <option>Laptop Services</option>
@@ -612,12 +610,12 @@
                 </select>
             </div>
 
-            <div class="form-group">
+            <div class="form-group fadeInRight">
                 <label>Message</label>
                 <textarea class="form-control" placeholder="Type Message here."></textarea>
             </div>
 
-            <button class="btn mt-5 btn-warning btn-block ml-auto">Submit</button>
+            <button class="btn mt-5 btn-warning btn-block ml-auto fadeInRight">Submit</button>
         </div>
     </div>
 </section>
@@ -703,6 +701,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="/scripts/main.js"></script>
 </body>
 
