--- a/public/about/index.html
+++ b/public/about/index.html
@@ -33,9 +33,9 @@
                     <!-- phone number -->
                     <a href="#">
 
-                        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-telephone-fill"
+                        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="header-icon bi bi-telephone-fill"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" fill="white"
+                            <path fill-rule="evenodd"
                                 d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
                         </svg>
                         <h6 class="m-0 mr-1 text-light">+91 XXXXX-XXXXX</h6>
@@ -49,24 +49,23 @@
                     <div class="p-1  align-items-center d-flex">
                         <div class="mr-4">
                             <a class="footer-icon" href="#">
-                                <svg width="2rem" height="2rem" viewBox="0 0 172 172" fill="none"
+                                <svg width="2rem" height="2rem" viewBox="0 0 172 172" fill="none" class="header-icon"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
-                                        d="M146.805 0H25.1953C11.3038 0 0 11.3038 0 25.1953V146.805C0 160.696 11.3038 172 25.1953 172H75.9219V111.195H55.7656V80.9609H75.9219V60.4688C75.9219 43.7965 89.484 30.2344 106.156 30.2344H136.727V60.4688H106.156V80.9609H136.727L131.688 111.195H106.156V172H146.805C160.696 172 172 160.696 172 146.805V25.1953C172 11.3038 160.696 0 146.805 0Z"
-                                        fill="white" />
+                                        d="M146.805 0H25.1953C11.3038 0 0 11.3038 0 25.1953V146.805C0 160.696 11.3038 172 25.1953 172H75.9219V111.195H55.7656V80.9609H75.9219V60.4688C75.9219 43.7965 89.484 30.2344 106.156 30.2344H136.727V60.4688H106.156V80.9609H136.727L131.688 111.195H106.156V172H146.805C160.696 172 172 160.696 172 146.805V25.1953C172 11.3038 160.696 0 146.805 0Z" />
                                 </svg>
                             </a>
                         </div>
                         <div class="mr-4">
-                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-envelope-open"
+                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="header-icon bi bi-envelope-open"
                                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" fill="white"
+                                <path fill-rule="evenodd"
                                     d="M8.47 1.318a1 1 0 0 0-.94 0l-6 3.2A1 1 0 0 0 1 5.4v.818l5.724 3.465L8 8.917l1.276.766L15 6.218V5.4a1 1 0 0 0-.53-.882l-6-3.2zM15 7.388l-4.754 2.877L15 13.117v-5.73zm-.035 6.874L8 10.083l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738zM1 13.117l4.754-2.852L1 7.387v5.73zM7.059.435a2 2 0 0 1 1.882 0l6 3.2A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765l6-3.2z" />
                             </svg>
                         </div>
                         <div>
                             <a class="footer-icon" href="#">
-                                <svg version="1.1" width="2rem" height="2rem" id="Capa_1"
+                                <svg version="1.1" width="2rem" height="2rem" id="Capa_1" class="header-icon"
                                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                     x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;"
                                     xml:space="preserve">
@@ -80,8 +79,7 @@
                                                 c1.824,3.776,3.648,8.896,1.088,13.856c-2.4,5.12-4.512,7.392-8.288,11.744c-3.776,4.352-7.36,7.68-11.136,12.352
                                                 c-3.456,4.064-7.36,8.416-3.008,15.936c4.352,7.36,19.392,31.904,41.536,51.616c28.576,25.44,51.744,33.568,60.032,37.024
                                                 c6.176,2.56,13.536,1.952,18.048-2.848c5.728-6.176,12.8-16.416,20-26.496c5.12-7.232,11.584-8.128,18.368-5.568
-                                                c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736C411.2,329.152,411.2,344.032,405.024,361.504z"
-                                        fill="white" />
+                                                c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736C411.2,329.152,411.2,344.032,405.024,361.504z" />
                                 </svg>
 
                             </a>
@@ -117,7 +115,135 @@
             </div>
         </div>
     </nav>
-    <h1>about </h1>
+    <div class="container pt-4 pb-4">
+    <div class="row bg-light br-10">
+        <div class="col-md-7 d-flex flex-column justify-content-center">
+            <div class="content">
+                <h3 class="section-title display-4">About Us</h3>
+                <p class="lead">LaptopSupport.in is one of the leading companies in Laptop Services & Sales. </p>
+                <a href="tel:911234567890" class="section-title">Call now</a>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <img src="../images/about_me.svg" style="width: 100%;">
+        </div>
+    </div>
+    <div class="row pt-3">
+        <div class="col-md-7">
+            <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300"
+                class="bi bi-building about-profile-background about-section-icon" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z" />
+                <path
+                    d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
+            </svg>
+            <div class="d-flex align-items-end">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" class="bi bi-building about-section-icon"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z" />
+                    <path
+                        d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
+                </svg>
+                <h3 class="m-0 section-title ml-2">Profile</h3>
+            </div>
+            <p class="lead">
+                &nbsp;&nbsp;&nbsp;&nbsp;We are specialise & authorised leader in the laptop repair, With a strong team
+                of
+                highly-skilled
+                professionals, knowledge & latest equipment for fastest services, we bring out more technical repair
+                solutions in-house, genuine parts inventory to provide most affordable & best quality services.
+                <br><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;In this Laptop Service industry from the year 2000 has made us capable of
+                providing
+                and creating the
+                best solutions for our customer. Laptopsupport.in is one of the leading companies in Laptop Repair and
+                Services domain, and is gaining momentum day by day. We have a strong team of individuals who have
+                supported and contributed to our success.
+            </p>
+            <button class="btn btn-light br-20">Connect now</button>
+
+
+
+        </div>
+    </div>
+    <div class="row pt-3">
+        <div class="col-md-7 ml-auto">
+            <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300"
+                class="about-misson-background about-section-icon bi bi-graph-up" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z" />
+            </svg>
+            <div class="d-flex align-items-end justify-content-end">
+                <h3 class="m-0 section-title mr-2">Mission</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" class="about-section-icon bi bi-graph-up"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z" />
+                </svg>
+
+            </div>
+            <p class="lead">
+                &nbsp;&nbsp;&nbsp;&nbsp;We are also into provideing service for Projectors & HDD/SSD data recovery with
+                most industry standards, We have always endeavoured to solve the issues and provide our customer with
+                world-class services before and after-sales.
+
+
+                <br><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;For Laptopsupport.in, our main priority is Customer Satisfaction. And To become
+                one of the leading service provider in the world of Laptop technology.
+            </p>
+            <button class="btn btn-light br-20">Connect now</button>
+
+
+
+        </div>
+    </div>
+</div>
+
+<section id="contactSection" class="mt-5 text-light pb-5 pt-5">
+    <h1 class="text-center section-title-light">Know more</h1>
+    <p class="text-center">Feel free to contact us</p>
+    <div class="container ">
+        <div class="col-md-7 mx-auto fadeInRight">
+            <div class="form-group">
+                <label>Name</label>
+                <input class="form-control" placeholder="Name">
+            </div>
+
+            <div class="form-row fadeInRight">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Phone</label>
+                        <input class="form-control" type="tel" placeholder="XXXX-XXXX-XX">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input class="form-control" type="email" placeholder="abc@example.com">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group fadeInRight">
+                <label>Services</label>
+                <select class="form-control">
+                    <option>Laptop Services</option>
+                    <option>Apple Services</option>
+                    <option>Projector Services</option>
+                </select>
+            </div>
+
+            <div class="form-group fadeInRight">
+                <label>Message</label>
+                <textarea class="form-control" placeholder="Type Message here."></textarea>
+            </div>
+
+            <button class="btn mt-5 btn-warning btn-block ml-auto fadeInRight">Submit</button>
+        </div>
+    </div>
+</section>
 
     <footer class="footer">
         <div class="container">
@@ -187,6 +313,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="/scripts/main.js"></script>
 </body>
 
