--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -115,16 +115,16 @@
             </div>
         </div>
     </nav>
-    <div class="container pt-4 pb-4">
+    <div class="container pt-4 pb-4" id="contactBanner">
     <div class="row bg-light br-10">
-        <div class="col-md-7 d-flex flex-column justify-content-center">
+        <div class="col-md-7 d-flex flex-column justify-content-center content-col">
             <div class="content">
                 <h3 class="section-title display-4">Contact Us</h3>
                 <p class="lead">LaptopSupport.in is one of the leading companies in Laptop Services & Sales. </p>
                 <a href="tel:911234567890" class="section-title">Call now</a>
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 image-col">
             <img src="../images/contact_us.svg" style="width: 100%;">
         </div>
     </div>
