services page added

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,8 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid p-0">
+    <main id="mainContent">
+        <div class="container-fluid p-0">
 
     <div id="bannerCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -247,7 +248,10 @@
             <h2 class="section-title">Why choose us?</h2>
         </div>
         <div class="col-md-8 ">
-            <p class="lead">We are providing support in laptop & computer from over a decade.. lorem ippsum</p>
+            <p class="lead"> In this Laptop Service industry from the year 2000 has made us capable of providing and
+                creating the best solutions for our customer. Laptopsupport.in is one of the leading companies in Laptop
+                Repair and Services domain, and is gaining momentum day by day. We have a strong team of individuals who
+                have supported and contributed to our success. </p>
         </div>
     </div>
 </section>
@@ -271,7 +275,7 @@
                 <div class="card-body text-center">
                     <h5>☝ Inward Your Laptop</h5>
                     <p>We are also providing free Pickup & Drop Facility.</p>
-                    <a href="#">Read more.</a>
+
                 </div>
             </div>
 
@@ -289,7 +293,7 @@
                     <h5>✌Estimate</h5>
                     <p>Our Well Experienced Technicians will diagnose the issue & provides estimate. We don't charge for
                         cancellation of estiamte <strong>No Fix, No Fees!</strong> </p>
-                    <a href="#">Read more.</a>
+
                 </div>
             </div>
 
@@ -305,7 +309,7 @@
                 <div class="card-body text-center">
                     <h5>🤘Deliver</h5>
                     <p>After confirmation of estimate, we fixes the issue and delivers to you.</p>
-                    <a href="#">Read more.</a>
+
                 </div>
             </div>
 
@@ -470,7 +474,7 @@
                         <div class="my-card-detail">
                             <h5>No Fix No Fees</h5>
                             <p>We provides Free Diagnosing <strong>No Cancellation Changes</strong> </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -484,7 +488,7 @@
                         <div class="my-card-detail">
                             <h5>Get Any Part</h5>
                             <p>Get Any laptop/ Apple/ projector parts @ dealer price </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -501,7 +505,7 @@
                         <div class="my-card-detail">
                             <h5>Next Day Estimate</h5>
                             <p>Get Fastest Estimation for majority of the issues.</p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -517,7 +521,7 @@
                         <div class="my-card-detail">
                             <h5>100% Satisfaction</h5>
                             <p>We Provide service with asurity at first.<strong></strong> pay only if satisfied</p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -535,7 +539,7 @@
                         <div class="my-card-detail">
                             <h5>Free Pickup and Drop</h5>
                             <p>We also provide facility to Pickup & Drop your Apple Product @ your Door Step. </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -550,7 +554,7 @@
                         <div class="my-card-detail">
                             <h5>30 Days Warranty & Support</h5>
                             <p>We provie Money Back Gaurantee So you only gonna Pay if your problem is resolved. </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -566,7 +570,7 @@
                         <div class="my-card-detail">
                             <h5>Affordable Price</h5>
                             <p>Fix issue with your Product at Much Much Affordable Price Gauranteed </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -632,6 +636,7 @@
         </div>
     </div>
 </section>
+    </main>
 
     <footer class="footer">
         <div class="container">
@@ -656,8 +661,8 @@
                         <div class="col-md-2 footer-menu">
                             <h3>Company</h3>
                             <ul>
-                                <li> <a href="#">Home</a> </li>
-                                <li> <a href="#">About</a> </li>
+                                <li> <a href="/">Home</a> </li>
+                                <li> <a href="/about">About</a> </li>
                                 <li> <a href="#">Blog</a> </li>
                                 <li> <a href="#">Career</a> </li>
 
@@ -695,6 +700,17 @@
 
 
     </footer>
+
+    <div id="moveToTop">
+        <button id="BtnMoveToTop" onclick="window.scrollTo(0,0)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" class="bi bi-arrow-up-square-fill"
+                viewBox="0 0 16 16">
+                <path
+                    d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2zm6.5-4.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 1 0z" />
+            </svg>
+        </button>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
