--- a/public/services/index.html
+++ b/public/services/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laptop Support | Home</title>
+    <title>Laptop Support | services</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -115,7 +115,124 @@
             </div>
         </div>
     </nav>
-    <h1>Services</h1>
+    <main id="mainContent">
+        <div class="container pt-4 pb-4" id="aboutBanner">
+    <div class="row bg-light br-10">
+        <div class="col-md-7 d-flex flex-column justify-content-center content-col">
+            <div class="content">
+                <h3 class="section-title display-4">Our Services</h3>
+                <p class="lead">LaptopSupport.in provides total laptop/ macbook/ iMac solution under one roof. </p>
+                <a href="tel:911234567890" class="section-title">Call now</a>
+            </div>
+        </div>
+        <div class="col-md-4 image-col">
+            <img src="../images/services.svg" style="width: 100%;">
+        </div>
+    </div>
+</div>
+<div class="container pt-4 pb-4">
+    <div class="d-flex flex-column flex-wrap justify-content-center">
+        <a href="/services/laptop/" class="p-1 my-card row">
+            <div class="col-md-4">
+                <img src="../images/laptop.png" alt="" style="max-width: 100%;">
+            </div>
+            <div class="col-md-8">
+                <div class="p-1 ">
+                    <h2 class="section-title ">Laptop
+                        Solution</h2>
+                    <p>Logic Board Repair/ Replacement <br>
+                        OS / Software installation <br>
+                        Laptop Body Fabication & New Replacement <br>
+                        Hinges fixing / Replacement <br>
+                        Keyboard Repalcement <br>
+                        Screen / Display Issues solution <br>
+                        Bios / Firmware password receovery <br>
+                        Bios / Firmware ReWriting <br>
+                        Battery Chnarging Solution</p>
+                </div>
+            </div>
+        </a>
+        <a href="/services/apple/" class="p-1 my-card row ">
+            <div class="col-md-4">
+                <img src="../images/apple_family.png" alt="" style="max-width: 100%;">
+            </div>
+            <div class="col-md-8">
+                <div class="p-1 ">
+                    <h2 class="section-title ">Apple
+                        Solution</h2>
+                    <p>macOS installation <br>
+                        Logic board Reparing/ Replacement <br>
+                        Power issues/ Battery Charging solution <br>
+                        Display Repair / Replacement <br>
+                        Firmware Update / Recovery (T2) <br>
+                        Data Recovery</p>
+                </div>
+            </div>
+        </a>
+        <a href="/services/hddrecovery/" class="p-1 my-card row ">
+            <div class="col-md-4">
+                <img src="../images/hddrecovery.png" alt="" style="max-width: 100%;">
+            </div>
+            <div class="col-md-8">
+                <div class="p-1 ">
+                    <h2 class="section-title ">Hdd
+                        Recovery</h2>
+                    <p>Firmware Issue Resolution <br>
+                        Head Replacement <br>
+                        Detection Issue Solution <br>
+                        Logic Board Repair/ Replacement <br>
+                        Partition Recovery <br>
+                        Lost File Recovery</p>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+
+<section id="contactSection" class="mt-5 text-light pb-5 pt-5">
+    <h1 class="text-center section-title-light">Know more</h1>
+    <p class="text-center">Feel free to contact us</p>
+    <div class="container ">
+        <div class="col-md-7 mx-auto fadeInRight">
+            <div class="form-group">
+                <label>Name</label>
+                <input class="form-control" placeholder="Name">
+            </div>
+
+            <div class="form-row fadeInRight">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Phone</label>
+                        <input class="form-control" type="tel" placeholder="XXXX-XXXX-XX">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input class="form-control" type="email" placeholder="abc@example.com">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group fadeInRight">
+                <label>Services</label>
+                <select class="form-control">
+                    <option>Laptop Services</option>
+                    <option>Apple Services</option>
+                    <option>Projector Services</option>
+                </select>
+            </div>
+
+            <div class="form-group fadeInRight">
+                <label>Message</label>
+                <textarea class="form-control" placeholder="Type Message here."></textarea>
+            </div>
+
+            <button class="btn mt-5 btn-warning btn-block ml-auto fadeInRight">Submit</button>
+        </div>
+    </div>
+</section>
+    </main>
 
     <footer class="footer">
         <div class="container">
@@ -140,8 +257,8 @@
                         <div class="col-md-2 footer-menu">
                             <h3>Company</h3>
                             <ul>
-                                <li> <a href="#">Home</a> </li>
-                                <li> <a href="#">About</a> </li>
+                                <li> <a href="/">Home</a> </li>
+                                <li> <a href="/about">About</a> </li>
                                 <li> <a href="#">Blog</a> </li>
                                 <li> <a href="#">Career</a> </li>
 
@@ -179,6 +296,17 @@
 
 
     </footer>
+
+    <div id="moveToTop">
+        <button id="BtnMoveToTop" onclick="window.scrollTo(0,0)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" class="bi bi-arrow-up-square-fill"
+                viewBox="0 0 16 16">
+                <path
+                    d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2zm6.5-4.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 1 0z" />
+            </svg>
+        </button>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
